logs/products.ltonlinetest.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/LTOnlineTest'...
Listing './lib/python3.5/site-packages/Products/LTOnlineTest/Extensions'...
Compiling './lib/python3.5/site-packages/Products/LTOnlineTest/OnlineTestTool.py'...
***   File "./lib/python3.5/site-packages/Products/LTOnlineTest/OnlineTestTool.py", line 17
    def method(self, args ...):
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/LTOnlineTest/skins'...
Listing './lib/python3.5/site-packages/Products/LTOnlineTest/skins/ltonlinetest'...
Compiling './lib/python3.5/site-packages/Products/LTOnlineTest/skins/ltonlinetest/onlinetest_getquestionlist.py'...
***   File "./lib/python3.5/site-packages/Products/LTOnlineTest/skins/ltonlinetest/onlinetest_getquestionlist.py", line 24
    return ids
             ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/LTOnlineTest/skins/ltonlinetest/onlinetest_process.py'...
***   File "./lib/python3.5/site-packages/Products/LTOnlineTest/skins/ltonlinetest/onlinetest_process.py", line 36
    return context.onlinetest_results()
                                      ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/Products.LTOnlineTest-0.2.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
